--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,20 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: cd my-app 
-    - run: npm run test
+    - name: Install dependencies
+    - run: |
+        cd my-app
+        npm ci
+    - name: Build the app
+      run: |
+        cd my-app
+        npm run build
+    - name: Run component tests
+      run: |
+        cd my-app
+        npm run test
+    - name: Start the app
+      run: |
+        cd my-app
+        npm start &
+        npx wait-on --timeout 60000
